# jambonne-site

./: .dockerignore  .gitignore  AUDIT_SUMMARY.txt  CODE_AUDIT_REPORT.md  Cargo.toml  Dockerfile  LICENSE  QUICK_FIXES.md  README.md  build.sh  check.sh  justfile  nixpacks.toml  project-structure.md  railway-complex.toml  railway.json  railway.toml  render.yaml  rust-mindmap-integration.md  rust-toolchain.toml
.github/workflows/: deploy.yml  python-ci.yml
mindmap-service/: Dockerfile  README.md  env.example  pyproject.toml  railway.json
mindmap-service/scripts/: keyword_sandbox.py
mindmap-service/src/: __init__.py  main.py  models.py
mindmap-service/src/api/: routes.py
mindmap-service/src/services/: clustering.py  embeddings.py  keyword_extraction.py  safari_reader.py  web_scraper.py
posts/: 2024-06-10-acts-of-service.md  2024-06-10-my-first-post.md  2025-06-10-acts-of-service.md  2025-06-23-empire-of-ai.md
scripts/: Makefile  README.md  copy_posts.sh  export_reading_list.py  mind_map_visualizer.py  pyproject.toml  reading_list.py  requirements.txt  setup.sh  style.sh
src/: main.rs
static/: style.css
static/data/: mindmap.json  reading_list.json
templates/: about.html  article.html  base.html  blog.html  cv.html  index.html  mindmap.html  reading.html
