[package]
name = "jambonne-site"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
pulldown-cmark = "0.10"
tower-http = { version = "0.5", features = ["fs"] }
include_dir = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.18"

# Database dependencies (uncomment when needed)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
# redis = { version = "0.23", features = ["tokio-comp"] }

# Additional microservice dependencies (uncomment when needed)
# redis = { version = "0.23", features = ["tokio-comp"] }
# reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
